crates/wac-parser/tests/resolution/fail/invalid-func-type-ref.wac
package test:comp;

interface i {
    type x = u32;

    x: x;
}